# dcmsort

./: .gitignore  Cargo.toml  LICENSE  README.md  examples.ps1
.github/workflows/: release.yml
docs/: design.md  validation.md
src/: cli.rs  dicom.rs  fs_ops.rs  lib.rs  main.rs  report.rs  sanitize.rs  sort.rs  types.rs
tests/: integration_test.rs
tests/common/: mod.rs
