[package]
name = "dcmsort"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }

# DICOM header parsing (DICOM-rs)
dicom-object = "0.9"
dicom-dictionary-std = "0.9"

walkdir = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rayon = { version = "1.11", optional = true }

[features]
default = []
parallel = ["rayon"]
